app/assets/stylesheets/_header.scss
#header {
  width: 94%;
  padding: 3%;
}

#home-title {
  padding-top: 40px;
  padding-bottom: 40px;
  text-align: center;
  h1 {
    font: 65px, cursive;
    margin: 0px;
    font-family: Staatliches, cursive;
  }
    a {
      text-decoration: none;
      color: #333333;
      font-size: 50px;
    }
  h1:after {
    content: " --- ";
    display: block;
    color: #11b29e;
    line-height: 25px;
    font-size: 40px;
  }
  span {
    display: block;
    text-transform: uppercase;
    font-size: 10px;
  }
}

#mobile-nav {
  text-align: center;
  margin: 40px;
  font-size: 11px;
  background-color: grey;
  line-height: 25px;
  letter-spacing: 1px;
  display: none;
  a{
    margin: 30px;
    text-transform: uppercase;
    text-decoration: none;
    color: #333333;
    cursor: pointer;
  }
}

#mobile-links {
  display: none;
  text-align: center;
  background-color: white;
  margin: 0 40px 40px 40px;
  font-size: 11px;
  line-height: 25px;
  letter-spacing: 1px;
  a{
    display: block;
    text-decoration: none;
    color: #333333;
    text-transform: uppercase;
    padding-top: 10px;
  }
}


#navigation {
  text-align: center;
  margin: 40px 0px 40px 0px;
  font-size: 11px;
  background-color: white;
  line-height: 25px;
  letter-spacing: 1px;
  a{
    margin: 30px;
    text-transform: uppercase;
    text-decoration: none;
    color: black;
  }
  a:hover{
    color: #11b29e;
  }
}


@media (max-width: 768px) {
  #navigation {
    display: none;
  }
  #mobile-nav {
    display: block;
    margin: 20px 40px 0px 40px;
  }

  #mobile-links {
    text-align: center;
    background-color: white;
    margin: 0 40px 40px 40px;
    font-size: 11px;
    line-height: 25px;
    letter-spacing: 1px;
    a{
      display: block;
      text-decoration: none;
      color: #333333;
      text-transform: uppercase;
      padding-top: 10px;
    }
  }
}

